--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         ABARERO
     </p>
 
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/jEHYWTcIpmg" title="SixTONES - ABARERO [YouTube ver.]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <li>なにわ男子</li>
 
     <p class="なにわ男子">
