全てにYouTubeを追加した

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         PANORAMA JET
     </p>
 
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/iX6NBlMzFLQ" title="【Music Video】PANORAMA JET / FANTASTICS from EXILE TRIBE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <li>GENERATIONS from EXILE TRIBE</li>
 
     <p class="GENERATIONS from EXILE TRIBE">
@@ -29,6 +31,8 @@
     <p class="チカラノカギリ">
         チカラノカギリ
     </p>
+
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/Bgb0rf0eve4" title="GENERATIONS from EXILE TRIBE / チカラノカギリ 〜レース Version〜 (Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <li>三代目 J Soul Brothers from EXILE TRIBE</li>
 
@@ -40,6 +44,8 @@
         Rat-tat-tat
     </p>
 
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/rffYRzO-85c" title="&#39;Rat-tat-tat&#39; Official Music Video / 三代目 J SOUL BROTHERS from EXILE TRIBE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <li>Vaundy</li>
 
     <p class="vaundy">
@@ -49,6 +55,8 @@
     <p class="怪獣の花唄">
         怪獣の花唄
     </p>
+
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/UM9XNpgrqVk" title="怪獣の花唄 / Vaundy ： MUSIC VIDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <li>もさを。</li>
 
@@ -60,6 +68,8 @@
         カラメル
     </p>
 
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/dQ5IhYsgYCU" title="カラメル / もさを。【Music Video】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <li>8LOOM</li>
 
     <p class="8LOOM">
@@ -70,6 +80,8 @@
         君の花になる
     </p>
 
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/_U4CObpSSGA" title="8LOOM ｢君の花になる｣ MV Dance Ver.【TBS】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <li>ASTRO</li>
 
     <p class="astro">
@@ -79,6 +91,8 @@
     <p class="one">
         one
     </p>
+
+    <iframe width="930" height="395" src="https://www.youtube.com/embed/XxlsLmHwCSk" title="ASTRO 아스트로 - ONE M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
     <li>SixTONES</li>
 
@@ -101,6 +115,8 @@
     <p class="2Faced">
         2Faced
     </p>
+
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/MO17Q1OoCQk" title="なにわ男子「2 Faced」(Kansai Johnnys’ Jr. DREAM PAVILION 〜Shall we #AOHARU​？〜)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 </body>
